fixed bugs / added features: buttonText rendering (removing movies), show Alert using notifyObserver